[package]
name = "csa_hackathon_rust"
version = "0.1.0"
authors = ["René Perschon <rene.perschon@akelius.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
maplit = "1.0.2"

[dev-dependencies]
float-cmp = "0.6.0"
